--- a/src/Calendar/calendar.css
+++ b/src/Calendar/calendar.css
@@ -1,160 +1,161 @@
 .calendar {
-    width: 100%;
-    height: 100%;
-    position: relative;
-  
-    height: 2rem;
-  }
-  
-  .input {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .button {
-    position: absolute;
-    right: 5px;
-    top: 0;
-    height: 100%;
-    padding: 0;
-    background: none;
-    outline: none;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .icon {
-    width: 20px;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-  }
-  
-  .popupContainer {
-    position: relative;
-  }
-  .popup {
-    border: 2px solid #E3EBF5;
-    border-radius: 10px;
-    width: fit-content;
-    position: absolute;
-    top: 0;
-    right: 0;
-    /* width: 290px; */
-    overflow: hidden;
-  }
-  
-  .glossary {
-    display: flex;
-    flex-direction: column;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-  }
-  
-  /* .row {
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+  height: 2rem;
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+}
+
+.button {
+  position: absolute;
+  right: 5px;
+  top: 0;
+  height: 100%;
+  padding: 0;
+  background: none;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.icon {
+  width: 20px;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
+
+.popupContainer {
+  position: relative;
+}
+.popup {
+  border: 2px solid #e3ebf5;
+  border-radius: 10px;
+  width: fit-content;
+  position: absolute;
+  top: 0;
+  right: 0;
+  /* width: 290px; */
+  overflow: hidden;
+}
+
+.glossary {
+  display: flex;
+  flex-direction: column;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
+
+/* .row {
     display: flex;
     flex-direction: row;
   } */
-  
-  .weekdayName {
-    width: 40px;
-    font-size: 0.875rem;
-    color: rgb(0 139 84 / 59%);
-    font-weight: 600;
-    font-size: 12px;
-    text-transform: capitalize;
-    padding: 15px 0 5px;
-  }
-  
-  .red {
-    color: red;
-  }
-  
-  .days {
-    /* display: flex;
+
+.weekdayName {
+  width: 40px;
+  font-size: 0.875rem;
+  color: rgb(0 139 84 / 59%);
+  font-weight: 600;
+  font-size: 12px;
+  text-transform: capitalize;
+  padding: 15px 0 5px;
+}
+
+.red {
+  color: red;
+}
+
+.days {
+  /* display: flex;
     flex-direction: row;
     flex-wrap: wrap; */
-    /* padding-top: 10px; */
-    display: grid;
-    grid-template-columns: repeat(7,1fr);
-  }
-  .day {
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 14px;
-    flex-basis: 14.2%;
-  }
-  .day:hover {
-    background-color: rgba(80, 186, 161, 0.3);
-  }
-  
-  .inrange,
-  .inrange:hover {
-    background-color: rgba(80, 186, 161, 0.2);
-  }
-  .selected,
-  .selected:hover {
-    background-color: rgb(0, 217, 166);
-    font-weight: 600;
-  }
-  
-  .disabled,
-  .disabled:hover {
-    color: rgba(83, 83, 83, 0.372);
-    background-color: transparent;
-    cursor: not-allowed;
-  }
-  
-  .yearContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 10px 20px;
-    background-color: rgb(0 179 137);
-    color: #fffff8;
-  }
+  /* padding-top: 10px; */
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+.day {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 14px;
+  flex-basis: 14.2%;
+}
+.day:hover {
+  background-color: rgba(80, 186, 161, 0.3);
+}
 
-  .dateContainer {
-    margin-top: -10px;
-    padding: 0 5px 10px;
-    background-color: white;
-    border-radius: 10px 10px 0 0;
-  }
-  
-  .yearBack,
-  .monthBack,
-  .monthNext,
-  .yearNext {
-    cursor: pointer;
-  }
-  
-  .monthYear {
-    display: flex;
-    flex-direction: column;
-  }
+.inrange,
+.inrange:hover {
+  background-color: rgba(80, 186, 161, 0.2);
+}
+.selected,
+.selected:hover {
+  background-color: rgb(0, 217, 166);
+  font-weight: 600;
+}
 
-  .month {
-    font-size: 14px;
-    font-weight: 600;
-  }
-  .year {
-    font-size: 16px;
-    font-weight: 700;
-  }
+.disabled,
+.disabled:hover {
+  color: rgba(83, 83, 83, 0.372);
+  background-color: transparent;
+  cursor: not-allowed;
+}
 
-  .hidden {
-    visibility: hidden;
-  }
+.yearContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px 20px;
+  background-color: rgb(0 179 137);
+  color: #fffff8;
+}
 
-  .next, .back {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-  }
+.dateContainer {
+  margin-top: -10px;
+  padding: 0 5px 10px;
+  background-color: white;
+  border-radius: 10px 10px 0 0;
+}
+
+.yearBack,
+.monthBack,
+.monthNext,
+.yearNext {
+  cursor: pointer;
+}
+
+.monthYear {
+  display: flex;
+  flex-direction: column;
+}
+
+.month {
+  font-size: 14px;
+  font-weight: 600;
+}
+.year {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.next,
+.back {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
